--- a/index.css
+++ b/index.css
@@ -3,10 +3,15 @@
 .contact_info{
   padding-top: 30px;
   padding-right: 5px;
+  text-align: left;
 }
 
 .numbers{
   color: #ff3333;
+}
+
+.nameLabel{
+  padding-left: 40px;
 }
 
 /* th{
@@ -102,7 +107,7 @@ table{
 }
 
 td{
-  padding-right: 5px;
+  padding-right: 20px;
 }
 
 #descText{
