--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 .contact_info{
-  padding-top: 30px;
-  padding-right: 5px;
+  padding-top: 23px;
+  padding-left: 30px;
   text-align: left;
 }
 
@@ -103,11 +103,11 @@ a:visited {
 table{
   padding-top: 40px;
   color:white;
-  padding-left: 100px;
+  padding-left: 120px;
 }
 
 td{
-  padding-right: 20px;
+  /* padding-right: 20px; */
 }
 
 #descText{
