added responsive image css

--- a/index.css
+++ b/index.css
@@ -20,6 +20,11 @@ table{
   padding-left: 150px;
 }
 
+.responsiveImg{
+  max-width: 100%;
+  height: auto;
+}
+
 td{
   /* padding-right: 20px; */
 }
