--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
-
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 .contact_info{
   padding-top: 23px;
-  padding-left: 0px;
+  padding-left: 70px;
   text-align: left;
 }
 
@@ -126,4 +126,14 @@ a:visited {
   margin: auto;
   padding-top: 20px;
   text-align: center;
+}
+
+#descp{
+  color: white;
+  font-family: 'Montserrat' , sans-serif;
+  width:50%;
+  margin: auto;
+  padding-top: 20px;
+  text-align: left;
+  font-size: 16px;
 }
