--- a/index.css
+++ b/index.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 .contact_info{
   padding-top: 23px;
-  padding-left: 70px;
-  text-align: left;
+  padding-left: 18px;
+  text-align: center;
 }
 
 .numbers{
@@ -17,7 +17,29 @@
 table{
   padding-top: 40px;
   color:white;
-  padding-left: 150px;
+  padding-left: 80px;
+  -webkit-border-horizontal-spacing: 0px;
+}
+
+th{
+  border-bottom: 1px solid #ddd;
+}
+
+
+/* beautify mobile table display */
+@media (max-width: 800px) {
+  table{
+    /* border: 1px solid black; */
+    padding-top: 40px;
+    padding-bottom: 40px;
+    color:white;
+    padding-left: 20px;
+    width: 80%;
+  }
+
+  th{
+    border-bottom: 1px solid #ddd;
+  }
 }
 
 .responsiveImg{
